Previous commit missed some files

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
+displayName=ImaDrum Money
+author=Ew Its Mike
 support=
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+description=Plays a sound clip by ImaDrum whenever you receive a good drop
+tags=alert,drops,imadrum,drum,money
+plugins=com.imadrummoney.MoneySoundPlugin
