--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -3,4 +3,4 @@ author=Ew Its Mike
 support=
 description=Plays a sound clip by ImaDrum whenever you receive a good drop
 tags=alert,drops,imadrum,drum,money
-plugins=com.imadrummoney.MoneySoundPlugin
+plugins=com.imadrummoney.ImadrumMoneyPlugin
